[package]
name = "fe-lisp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chumsky = "0.9.2"
clap = { version = "4.3.0", features = ['derive']}
rustc-hash = "1.1.0"
rustyline = "11.0.0"
rustyline-derive = "0.8.0"

[profile.release]
debug = true # flamegraph
